game/k8s/hfg-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hfg-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: hfg-prod
