game/k8s/hfg-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hfg-server
  labels:
    app: hfg
    tier: server
spec:
  selector:
    matchLabels:
      app: hfg
      tier: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hfg
        tier: server
    spec:
      containers:
      - image: byronstar/hfg-programming:latest
        name: server
        ports:
        - name: http
          containerPort: 8090
        - name: https
          containerPort: 8091
        volumeMounts:
        - name: hfg-ssl
          mountPath: /usr/src/game/cert
          readOnly: true
      imagePullSecrets:
        - name: dockerhub
      volumes:
        - name: hfg-ssl
          secret:
            secretName: hfg-cert
