game/k8s/nginx-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: hfg
    tier: nginx
spec:
  selector:
    matchLabels:
      app: hfg
      tier: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: hfg
        tier: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: certbot
          containerPort: 80
        - name: http
          containerPort: 8090
        - name: https
          containerPort: 8091
        volumeMounts:
        - name: nginx-configs
          mountPath: /etc/nginx/conf.d
        - name: nginx-ssl
          mountPath: /etc/nginx/ssl
          readOnly: true
      # Load the configuration files for nginx
      volumes:
        - name: nginx-configs
          configMap:
            name: nginx-config
        - name: nginx-ssl
          secret:
            secretName: hfg-cert
