game/k8s/certbot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: certbot
spec:
  externalIPs: ["184.172.252.200"]
  selector:
    app: hfg
    tier: certbot
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 8080
