game/k8s/letsencrypt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt
spec:
  externalIPs: ["184.172.252.200"]
  selector:
    app: letsencrypt
  ports:
  - protocol: "TCP"
    port: 80
