game/k8s/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  externalIPs: ["184.172.252.200"]
  selector:
    app: nginx
  ports:
  - protocol: "TCP"
    port: 80
