game/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-service"
spec:
  tls:
  - hosts:
    - hfg.hopto.org
    secretName: <tls_secret_name>
  rules:
  - host: hfg.hopto.org # CHANGE ME!
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
